[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/UI/Shop Item Panel.png" type="Texture" id=1]
[ext_resource path="res://Fonts/at01.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/UI/Buy Button.png/0.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/Buy Button.png/1.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/Buy Button.png/2.png" type="Texture" id=5]
[ext_resource path="res://Art/Small Coin.png" type="Texture" id=6]
[ext_resource path="res://Fonts/tinypixel/tinypixel.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/ShopItem.gd" type="Script" id=8]
[ext_resource path="res://Sounds and Music/BuySound.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds and Music/FailedPurchaseSound.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="ShopItem" type="VBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
custom_constants/separation = 4
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
margin_right = 48.0
margin_bottom = 36.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="TextureRect" parent="Panel/CenterContainer"]
margin_left = 24.0
margin_top = 18.0
margin_right = 24.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 48.0
margin_bottom = 48.0
custom_constants/separation = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 2.0
margin_right = 20.0
margin_bottom = 8.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 8.0

[node name="Cost" type="Label" parent="HBoxContainer/HBoxContainer/CenterContainer"]
margin_right = 10.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/HBoxContainer"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 8.0
texture = ExtResource( 6 )

[node name="BuyButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 22.0
margin_right = 46.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 12, 4 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/BuyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 36.0
margin_bottom = 8.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "Buy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTween" type="Tween" parent="HBoxContainer/BuyButton"]

[node name="InsufficienceCoinsLabel" type="RichTextLabel" parent="HBoxContainer/BuyButton"]
modulate = Color( 0.937255, 0.12549, 0.12549, 1 )
margin_left = -34.4101
margin_top = 8.0
margin_right = 37.5899
margin_bottom = 18.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 36, 3 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[shake rate=3 level=2]Insufficient coins[/shake]"
text = "Insufficient coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTween" type="Tween" parent="HBoxContainer/BuyButton"]

[node name="BuySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="FailedPurchaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="pressed" from="HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
